gcc/testsuite/g++.dg/init/pr60572.C
// PR c++/60572
// { dg-do compile }

struct A
{
  A x;	// { dg-error "incomplete type" }
  virtual ~A () {}
};

struct B : A
{
  B () : A () {}
};
